[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/screens/title_screen.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/VolumeSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/WaterBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/title.png" type="Texture" id=6]
[ext_resource path="res://scripts/ui_elements/title_movement.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="WaterBackground" parent="." instance=ExtResource( 5 )]

[node name="FadeRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Title" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="TitleTextureRect" type="TextureRect" parent="Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 655.0
texture = ExtResource( 6 )

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = 60.0
margin_right = 250.0
margin_bottom = 460.0
rect_min_size = Vector2( 500, 400 )
custom_constants/separation = 30

[node name="PlayButton" parent="MainContainer" instance=ExtResource( 2 )]
margin_right = 500.0
margin_bottom = 113.0

[node name="OptionsButton" parent="MainContainer" instance=ExtResource( 2 )]
margin_top = 143.0
margin_right = 500.0
margin_bottom = 256.0
text = "Options"

[node name="QuitButton" parent="MainContainer" instance=ExtResource( 2 )]
margin_top = 286.0
margin_right = 500.0
margin_bottom = 400.0
text = "Quit"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -414.0
margin_right = 300.0
margin_bottom = -80.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 30

[node name="OptionsLabel" type="Label" parent="OptionsContainer"]
margin_right = 600.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="VolumeSlider" parent="OptionsContainer" instance=ExtResource( 3 )]
margin_top = 90.0
margin_bottom = 190.0

[node name="BackButton" parent="OptionsContainer" instance=ExtResource( 2 )]
margin_top = 220.0
margin_right = 600.0
margin_bottom = 334.0
rect_min_size = Vector2( 0, 114 )
size_flags_vertical = 1
text = "Back"
